--- a/package.json
+++ b/package.json
@@ -49,12 +49,13 @@
     "lint-staged": "^15.5.1",
     "lodash-es": "^4.17.21",
     "prettier-plugin-astro": "^0.14.1",
-    "simple-git-hooks": "^2.12.1"
+    "simple-git-hooks": "^2.12.1",
+    "typescript": "^5.8.3"
   },
   "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
+    "pre-commit": "yarn lint-staged"
   },
   "lint-staged": {
-    "*": "npm run lint:fix"
+    "*": "yarn lint:fix"
   }
 }
