--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "release": "bumpp"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.2.4",
-    "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.3.0",
-    "@astrojs/vue": "^5.0.10",
+    "@astrojs/mdx": "4.3.4",
+    "@astrojs/rss": "4.0.12",
+    "@astrojs/sitemap": "3.5.1",
+    "@astrojs/vue": "5.1.0",
     "@unocss/reset": "66.1.0-beta.11",
-    "astro": "^5.6.2",
+    "astro": "5.13.4",
     "nprogress": "^0.2.0",
     "unocss": "66.1.0-beta.11",
     "vue": "^3.5.13"
